mobile font size and media querys

--- a/index.html
+++ b/index.html
@@ -143,9 +143,9 @@
       <!-- carousel end -->
     </div>
     <!-- scroll down button -->
-    <section id="section06" class="demo">
+    <!-- <section id="section06" class="demo">
       <a href="#about-me"><span></span></a>
-    </section>
+    </section> -->
   </div>
   <!-- PAGE number four -->
   <div class="page four">
