--- a/index.html
+++ b/index.html
@@ -46,13 +46,17 @@
     <!-- socials on page two -->
     <div id="social-two" class="social-menu">
       <ul>
-        <li><a href="https://www.instagram.com/nazinskis123/?hl=en" target="blank"><i class="fab fa-instagram"></i></a>
-        </li>
         <li><a href="https://www.linkedin.com/in/art%C5%ABrs-torsters-51371721a/" target="blank"><i
               class="fab fa-linkedin-in"></i></a></li>
+        <li><a href="https://github.com/Arturrs23" target="blank"><i class="fab fa-github"></i></a></li>
+        <li><a href="mailto:arrturs.torsters@gmail.com" target="blank"><i class="fas fa-envelope-open"></i></a>
+        </li>
         <li><a href="https://www.facebook.com/arthur.englandd" target="blank"><i class="fab fa-facebook"></i></a></li>
+        <li><a href="https://www.instagram.com/nazinskis123/?hl=en" target="blank"><i class="fab fa-instagram"></i></a>
+        </li>
       </ul>
     </div>
+
     <!-- page two text -->
     <p class="about-me-text-one">I'm <span class="extra">Artūrs</span>
       <!-- <p class="intro-text">| Front-end web developer |</p> -->
