--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <li><a href="https://www.linkedin.com/in/art%C5%ABrs-torsters-51371721a/" target="blank"><i
               class="fab fa-linkedin-in"></i></a></li>
         <li><a href="https://github.com/Arturrs23" target="blank"><i class="fab fa-github"></i></a></li>
-        <li><a href="mailto:arrturs.torsters@gmail.com" target="blank"><i class="fas fa-envelope-open"></i></a>
+        <li><a href="mailto:arrturs.torsters@gmail.com" target="blank"><i class="fab fa-google"></i></a>
         </li>
         <li><a href="https://www.facebook.com/arthur.englandd" target="blank"><i class="fab fa-facebook"></i></a></li>
         <li><a href="https://www.instagram.com/nazinskis123/?hl=en" target="blank"><i class="fab fa-instagram"></i></a>
@@ -94,13 +94,16 @@
   <!-- PAGE number three -->
   <div class="page three">
     <!-- socials on page three -->
-    <div id="social-two" class="social-menu">
+   <div id="social-two" class="social-menu">
       <ul>
-        <li><a href="https://www.instagram.com/nazinskis123/?hl=en" target="blank"><i class="fab fa-instagram"></i></a>
-        </li>
         <li><a href="https://www.linkedin.com/in/art%C5%ABrs-torsters-51371721a/" target="blank"><i
               class="fab fa-linkedin-in"></i></a></li>
+        <li><a href="https://github.com/Arturrs23" target="blank"><i class="fab fa-github"></i></a></li>
+        <li><a href="mailto:arrturs.torsters@gmail.com" target="blank"><i class="fab fa-google"></i></a>
+        </li>
         <li><a href="https://www.facebook.com/arthur.englandd" target="blank"><i class="fab fa-facebook"></i></a></li>
+        <li><a href="https://www.instagram.com/nazinskis123/?hl=en" target="blank"><i class="fab fa-instagram"></i></a>
+        </li>
       </ul>
     </div>
     <!-- carousel with cards -->
@@ -108,9 +111,10 @@
       <input type="radio" name="slider" id="item-1" checked />
       <input type="radio" name="slider" id="item-2" />
       <input type="radio" name="slider" id="item-3" />
+      <input type="radio" name="slider" id="item-4"  />
       <div class="cards">
         <!-- first card -->
-        <label class="card" for="item-1" id="song-1">
+        <label class="card" for="item-1" id="work-1">
           <div class="overlay-text">
             <div class="span-text">Sparkleheart</div>
             <div class="span-subtext">TEST2</div>
@@ -118,7 +122,7 @@
           <img class="images" src="/assets/img/Screenshot_1.png" alt="TITLE 1" />
         </label>
         <!-- second card -->
-        <label class="card" for="item-2" id="song-2">
+        <label class="card" for="item-2" id="work-2">
           <div class="overlay-text">
             <div class="span-text">Sparkleheart</div>
             <div class="span-subtext">TEST2</div>
@@ -126,12 +130,19 @@
           <img class="images" src="/assets/img/Screenshot_2.png" alt="TITLE 2" />
         </label>
         <!-- third card -->
-        <label class="card" for="item-3" id="song-3">
+        <label class="card" for="item-3" id="work-3">
           <div class="overlay-text">
             <div class="span-text">Sparkleheart</div>
             <div class="span-subtext">TEST2</div>
           </div>
           <img class="images" src="/assets/img/Screenshot_3.png" alt="TITLE 3" />
+        </label>
+        <label class="card" for="item-4" id="work-4">
+          <div class="overlay-text">
+            <div class="span-text">Sparkleheart</div>
+            <div class="span-subtext">TEST2</div>
+          </div>
+          <img class="images" src="/assets/img/prof pic 2.png" alt="TITLE 4" />
         </label>
       </div>
       <!-- The Modal with images onclick -->
@@ -156,11 +167,14 @@
     <!-- socials on page four -->
     <div id="social-two" class="social-menu">
       <ul>
-        <li><a href="https://www.instagram.com/nazinskis123/?hl=en" target="blank"><i class="fab fa-instagram"></i></a>
-        </li>
         <li><a href="https://www.linkedin.com/in/art%C5%ABrs-torsters-51371721a/" target="blank"><i
               class="fab fa-linkedin-in"></i></a></li>
+        <li><a href="https://github.com/Arturrs23" target="blank"><i class="fab fa-github"></i></a></li>
+        <li><a href="mailto:arrturs.torsters@gmail.com" target="blank"><i class="fab fa-google"></i></a>
+        </li>
         <li><a href="https://www.facebook.com/arthur.englandd" target="blank"><i class="fab fa-facebook"></i></a></li>
+        <li><a href="https://www.instagram.com/nazinskis123/?hl=en" target="blank"><i class="fab fa-instagram"></i></a>
+        </li>
       </ul>
     </div>
     <!-- timeline -->
@@ -210,17 +224,7 @@
   </div>
   <!-- main container end -->
   </div>
-
-
-
-
-
-
-
-
-
-
-  <!-- script start -->
+<!-- script start -->
   <script>
     //scroll down button
     function scrollWin() {
