--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
   <!-- PAGE number three -->
   <div class="page three">
     <!-- socials on page three -->
-   <div id="social-two" class="social-menu">
+    <div id="social-two" class="social-menu">
       <ul>
         <li><a href="https://www.linkedin.com/in/art%C5%ABrs-torsters-51371721a/" target="blank"><i
               class="fab fa-linkedin-in"></i></a></li>
@@ -111,7 +111,7 @@
       <input type="radio" name="slider" id="item-1" checked />
       <input type="radio" name="slider" id="item-2" />
       <input type="radio" name="slider" id="item-3" />
-      <input type="radio" name="slider" id="item-4"  />
+      <input type="radio" name="slider" id="item-4" />
       <div class="cards">
         <!-- first card -->
         <label class="card" for="item-1" id="work-1">
@@ -224,7 +224,7 @@
   </div>
   <!-- main container end -->
   </div>
-<!-- script start -->
+  <!-- script start -->
   <script>
     //scroll down button
     function scrollWin() {
@@ -251,7 +251,7 @@
       };
     }
     //close btn
-    var span = document.getElementsByClassName("close")[0];
+    let span = document.getElementsByClassName("close")[0];
     span.onclick = function () {
       modal.style.display = "none";
     };
