--- a/index.html
+++ b/index.html
@@ -98,6 +98,8 @@
         </li>
       </ul>
     </div>
+    <!-- priojects text -->
+    <p class="Projects-text">Pro<span class="extra-projects">jects</span>
     <!-- carousel with cards -->
     <div class="carousel">
       <input type="radio" name="slider" id="item-1" checked />
@@ -161,11 +163,14 @@
         </li>
       </ul>
     </div>
+   
     <!-- timeline -->
     <div class="timeline">
+      
       <div class="container-timeline  right">
         <div class="content">
           <h2>2020</h2>
+          
           <p class="timeline-text">Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto
             mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per,
             habeo iusto primis ea eam.</p>
